fix layout issues and begin cleaning up styles

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -31,7 +31,7 @@ body {
 .home-page-h1 {
   color:  $brand-white;
   font-family: 'Oswald', sans-serif;
-  width: 32rem;
+  // width: 32rem;
   margin-top: .5rem;
   margin-bottom: 2rem;
 }
@@ -130,7 +130,7 @@ body {
   font-size: 3rem;
   font-weight: lighter;
   margin: auto;
-  width: 12.5rem;
+  // width: 12.5rem;
   // position: relative;
   // top: -15px;
   margin-top: 0;
@@ -228,7 +228,7 @@ body {
   font-size: 2.75rem;
   font-weight: lighter;
   margin: auto;
-  width: 15rem;
+  // width: 15rem;
   margin-top: 0;
   color: $brand-white;
 
@@ -244,6 +244,7 @@ body {
 .direction-image-parent {
   width: 40%;
   margin: auto;
+  margin-bottom: 1rem;
 
 }
 @media screen and (min-width: 760px) {
@@ -280,7 +281,7 @@ body {
   font-size: 2.75rem;
   font-weight: lighter;
   margin: auto;
-  width: 13.8rem;
+  // width: 13.8rem;
   margin-top: 0;
   color: $brand-white
 
@@ -319,7 +320,7 @@ body {
   font-size: 2.75rem;
   font-weight: lighter;
   margin: auto;
-  width: 11.3rem;
+  // width: 11.3rem;
   margin-top: 0;
 
 }
@@ -375,7 +376,7 @@ body {
   font-size: 2.75rem;
   font-weight: lighter;
   margin: auto;
-  width: 10.1rem;
+  // width: 10.1rem;
   margin-top: 0;
 
 }
@@ -455,10 +456,10 @@ body {
 // extra stuff for cities page****************************************
 
 
-.90 {
-  min-width: 90%;
+.margin-top-bottom {
+  margin-top: 1.5rem;
+  margin-bottom: 3rem;
 }
-
 
 .back-button {
   border-radius: 20%;
@@ -498,7 +499,8 @@ body {
   // background: url('http://www.blacklightslide.com/wp-content/uploads/2016/10/nashvillelarge.jpg')center center no-repeat;
   // background-size: cover;
   text-shadow: black 2px 2px;
-
+  font-size: 3rem;
+  margin-bottom: 3rem;
   &:hover {
     text-shadow: grey 2px 2px;
   }
